[package]
name = "helicase"
version = "0.1.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "helicase"
path = "src/lib.rs"

[[bin]]
name = "endonuclease"
path = "endonuclease/src/main.rs"

[dependencies]
regex = "1.3.5"