[package]
name = "helicase"
version = "0.1.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.5"
codespan = "0.9.0"
codespan-reporting = "0.9.0"
structopt = "0.3.11"