[package]
name = "helicase"
version = "0.1.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.12"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
codespan = "0.9.1"
codespan-reporting = "0.9.1"
thiserror = "1.0.13"
itertools = "0.9.0"